# Smartech_home_assignment

./: .gitignore  README.md  app.py  models.py  prometheus.yml  pyproject.toml  test_app.py
