[tool.poetry]
name = "smartech-home-assignment"
version = "0.1.0"
description = ""
authors = ["Doal926 <doal926@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-httpauth = "^4.8.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
